--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-native-gesture-handler": "^1.0.15",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-router-native": "^4.3.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
