--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "react": "16.6.3",
     "react-native": "0.58.1",
     "react-native-gesture-handler": "^1.0.15",
-    "react-navigation": "^3.0.9",
+    "react-native-router-flux": "^4.0.6",
+    "react-navigation": "^3.2.1",
     "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-router-native": "^4.3.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
